# shiny-guide

./: pyproject.toml  requirements.txt  services.yml
.github/workflows/: build.yml
